[package]
name = "rds"
version = "0.1.0"
edition = "2024"

[dependencies]
libmdbx = { version = "0.6.5", features = ["lifetimed-bytes"] }
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
memchr = "2.7.6"
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
log = "0.4.29"
env_logger = "0.11.8"
flume = "0.12.0"
crossbeam-utils = "0.8.21"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async", "async_tokio"] }
tempfile = "3.24.0"

[[bench]]
name = "bench_lmdbx"
harness = false

[profile.release]
debug = true
